--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                         <li class="nav__item"><a href="#home" class="nav__link active">Home</a></li>
                         <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
                         <li class="nav__item"><a href="#skills" class="nav__link">Skills</a></li>
-                        <li class="nav__item"><a href="#portfolio" class="nav__link">Portfolio</a></li>
+                        <li class="nav__item"><a href="#portfolio" class="nav__link">Projects</a></li>
                         <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
                     </ul>
                 </div>
@@ -64,6 +64,9 @@
                 <h2 class="section-title">Skills</h2>
 
                 <div class="skills__container bd-grid">
+                    <div class="skills__img">
+                        <img src="css/img/skillspic.png" alt="" style="border-radius: 50%;">
+                    </div>
                     <div class="skills__box">
                         <h3 class="skills__subtitle">Development Path</h3>
                         <span class="skills__name">Html</span>
@@ -84,9 +87,7 @@
                        
                     </div>
 
-                    <div class="skills__img">
-                        <img src="css/img/skills.png" alt="">
-                    </div>
+                  
                 </div>
             </section>
 
@@ -184,7 +185,7 @@
                         <li><a href="#home" class="footer__link">Home</a></li>
                         <li><a href="#about" class="footer__link">About</a></li>
                         <li><a href="#skills" class="footer__link">Skills</a></li>
-                        <li><a href="#portfolio" class="footer__link">Portfolio</a></li>
+                        <li><a href="#portfolio" class="footer__link">Projects</a></li>
                         <li><a href="#Contact" class="footer__link">Contact</a></li>
                     </ul>
                 </div>
