add js and images

--- a/index.html
+++ b/index.html
@@ -97,45 +97,45 @@
 
                 <div class="portfolio__container bd-grid">
                     <div class="portfolio__img">
-                        <img src="css//img/neigh.png" alt="">
+                        <img src="css//img/pizzapic.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://lindajirani.herokuapp.com/" class="Neighbourhood">View more</a>
+                            <a href="https://calebu6214.github.io/Rozak-Pizza-Delivery/" class="Neighbourhood">View more</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="css/img/awards.png" alt="">
+                        <img src="css/img/gallerypic.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://giidiawards.herokuapp.com/" class="Awwards-App">View more</a>
+                            <a href="https://gallerykim.herokuapp.com/" class="Awwards-App">View more</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="css/img/pizza.png" alt="">
+                        <img src="css/img/musivibepic.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://olesigilai.github.io/pizza/" class="Pizza">View more</a>
+                            <a href="https://musivibe-16a44.web.app/" class="Pizza">View more</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="css/img/pitches.png" alt="">
+                        <img src="css/img/quotespic.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://minepitch.herokuapp.com/" class="Pitches">View more</a>
+                            <a href="https://calebu6214.github.io/Quotes-vote/" class="Pitches">View more</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="css/img/akan.png" alt="">
+                        <img src="css/img/neighpic.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://olesigilai.github.io/Akan-Name/" class="Akan-Name">View more</a>
+                            <a href="https://neighborkim.herokuapp.com/" class="Akan-Name">View more</a>
                         </div>
                     </div>
                     <div class="portfolio__img">
-                        <img src="css/img/gitser.png" alt="">
+                        <img src="css/img/awardpic.png" alt="">
 
                         <div class="portfolio__link">
-                            <a href="https://olesigilai.github.io/GithubAPI/" class="Git-search">View more</a>
+                            <a href="https://awardkim.herokuapp.com/" class="Git-search">View more</a>
                         </div>
                     </div>
                 </div>
@@ -165,7 +165,7 @@
 
                         <textarea name="" id="" cols="0" rows="10" class="contact__input"></textarea>
 
-                        <input type="submit" value="submit" class="contact__button">
+                        <input type="submit" style="background-color: aqua;" value="submit" class="contact__button">
                     </form>
                 </div>
             </section>
